clusters/dev/k3s/kube-system/gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: https-443
  namespace: kube-system
spec:
  gatewayClassName: traefik
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: https
    port: 443
    protocol: HTTP
    #protocol: HTTPS
    #tls:
    #  mode: Terminate
    #  certificateRefs:
    #  - kind: Secret
    #    name: ${SECRETNAME}
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-80
  namespace: kube-system
spec:
  gatewayClassName: traefik
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http
    port: 80
    protocol: HTTP
